{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 592,
  "lineage": "d22c150a-f170-93c0-21fe-5d48575d57b2",
  "resources": [
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_subnet",
      "name": "pod_subnet_info",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-05b0ab27efbcce8bc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:subnet/subnet-05b0ab27efbcce8bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "available_ip_address_count": 985,
            "cidr_block": "100.64.4.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b0ab27efbcce8bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539666729110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-pod-private-subnet-an2-c",
              "Project": "kkm",
              "Service": "pod-an2-c",
              "TerraformManaged": "true",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/internal-elb": "0"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          }
        },
        {
          "index_key": "subnet-0f31189c578840eb2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:subnet/subnet-0f31189c578840eb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 968,
            "cidr_block": "100.64.0.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f31189c578840eb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539666729110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-pod-private-subnet-an2-a",
              "Project": "kkm",
              "Service": "pod-an2-a",
              "TerraformManaged": "true",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/internal-elb": "0"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:vpc/vpc-011ebc81521b43f44",
            "cidr_block": "172.33.0.0/20",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0dbc1b7be7b4ed4a4",
                "cidr_block": "172.33.0.0/20",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-02e6f852cb3ea8cd5",
                "cidr_block": "100.64.0.0/20",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-082b2de0972a7f7f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "poc-kkm-vpc"
                ]
              }
            ],
            "id": "vpc-011ebc81521b43f44",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04481abad4770b0b1",
            "owner_id": "539666729110",
            "tags": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-vpc",
              "Project": "kkm",
              "Service": "vpc",
              "TerraformManaged": "true",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "additional_cluster_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-02f6f27866ea24981",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-02f6f27866ea24981",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "poc-kkm-cluster-add-sg",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Service": "security group"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "",
              "CodeRepo": "",
              "CodeRevision": "",
              "Environment": "poc",
              "Project": "kkm",
              "Service": "security group",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.data.aws_vpc.cluster_vpc_name"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_cluster_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "karpenter",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-09e94d23851622419",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-09e94d23851622419",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "karpenter-security-group",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "NodeGroup": "karpenter"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "",
              "CodeRepo": "",
              "CodeRevision": "",
              "Environment": "poc",
              "NodeGroup": "karpenter",
              "Project": "kkm",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.data.aws_vpc.cluster_vpc_name"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "worker1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-0dcbe359e4293c167",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0dcbe359e4293c167",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "worker1-sg-20250403004344748300000002",
            "name_prefix": "worker1-sg-",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "NodeGroup": "worker1"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "",
              "CodeRepo": "",
              "CodeRevision": "",
              "Environment": "poc",
              "NodeGroup": "worker1",
              "Project": "kkm",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.data.aws_vpc.cluster_vpc_name"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "worker2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-0c80cdcd59ef82eca",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0c80cdcd59ef82eca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "worker2-sg-20250403004344748400000003",
            "name_prefix": "worker2-sg-",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "NodeGroup": "worker2"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "",
              "CodeRepo": "",
              "CodeRevision": "",
              "Environment": "poc",
              "NodeGroup": "worker2",
              "Project": "kkm",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.data.aws_vpc.cluster_vpc_name"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "additional_cluster_security_group_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2589967643",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f6f27866ea24981",
            "security_group_rule_id": "sgr-03795412e53e47004",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster_rol",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.additional_cluster_security_group",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_trust_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.data.aws_security_group.additional_cluster_security_group_id",
            "module.eks.data.aws_security_group.primary_cluster_security_group_id",
            "module.eks.data.aws_subnets.private_subnets",
            "module.eks.data.aws_vpc.cluster_vpc_name",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    }
  ]
}